@@ -1,65 +1,272 @@
-# Hawk Eye
+# hawk-eye
 
-File watcher for Clojure.
+A lightweight, cross-platform file watching library for Clojure with debouncing support. 
 
-## Usage
+## Features
+
+- 🚀 **Fast & Efficient**: Uses native FSEvents on macOS, virtual threads on Java 21+, and optimized polling elsewhere
+- 🎯 **Simple API**: Just two main functions - `watch` and `debounce`
+- 🔄 **Auto-recursive**: Automatically watches subdirectories and newly created directories
+- ⚡ **Debouncing Built-in**: Avoid triggering on rapid-fire changes
+- 🛡️ **Robust Error Handling**: Graceful fallbacks and clear error reporting
+- 📦 **Minimal Dependencies**: Core library has zero dependencies, FSEvents support requires JNA
+
+## Installation
+
+Add to your `deps.edn`:
+
+```clojure
+{:deps {hawk-eye/hawk-eye {:local/root "lib/hawk-eye"}}}
+```
+
+Or if published to Clojars:
+
+```clojure
+{:deps {hawk-eye/hawk-eye {:mvn/version "0.1.0"}}}
+```
+
+## Quick Start
 
 ```clojure
 (require '[hawk-eye.core :as hawk])
 
-;; Watch directories
+;; Start watching directories
 (def stop (hawk/watch ["src" "resources"]
-                      (fn [event] 
-                        (println (:type event) (:file event)))
-                      (fn [error context] 
-                        (println error))))
+                      (fn [event]
+                        (println (:type event) ":" (:file event)))
+                      (fn [error context]
+                        (println "Error:" error))))
 
-;; Stop watching
+;; When done, stop watching
 (stop)
 ```
 
 ## API
 
 ### `watch`
+
+Watch directories for file system changes.
+
 ```clojure
 (watch paths notify-fn error-fn)
 (watch paths notify-fn error-fn options)
 ```
 
-Watches paths recursively. New subdirectories are automatically watched.
+**Arguments:**
+- `paths` - Collection of directory paths to watch (always recursive)
+- `notify-fn` - Called with event map: `{:type :create/:modify/:delete, :file "name", :path "full/path", :timestamp ms}`
+- `error-fn` - Called with exception and context map when errors occur
+- `options` - Optional map with:
+  - `:mode` - `:auto` (default), `:vthread`, `:poll`, or `:fsevents`
+  - `:poll-ms` - Polling interval in milliseconds (default: 10, only used in `:poll` mode)
 
-- `paths` - Collection of directory paths
-- `notify-fn` - Called with `{:type :create/:modify/:delete, :file "name", :path "full/path", :timestamp ms}`
-- `error-fn` - Called with exception and context map
-- `options` - Optional:
-  - `:recursive` - Watch subdirectories (default: true)
-
-Returns a stop function.
+**Returns:** A zero-argument stop function with metadata containing the actual mode used
 
 ### `debounce`
+
+Create a debounced version of a function that only executes after a quiet period.
+
 ```clojure
-(debounce f delay-ms & {:keys [events]})
+(debounce f delay-ms)
+(debounce f delay-ms :events mode)
 ```
 
-Debounce a function. Useful for file watchers.
-
+**Arguments:**
+- `f` - Function to debounce
+- `delay-ms` - Milliseconds to wait before calling
 - `:events` - How to handle multiple calls:
-  - `:last` (default) - Use last event
-  - `:first` - Use first event  
-  - `:all` - Collect all events
-  - `:unique` - Collect unique events
+  - `:last` (default) - Use only the last arguments
+  - `:first` - Use only the first arguments
+  - `:all` - Pass vector of all argument sets
+  - `:unique` - Pass vector of unique argument sets
 
-## Installation
+## Examples
 
-Add to `deps.edn`:
+### Basic File Watching
 
 ```clojure
-{:deps {com.github.anteo/hawk-eye {:git/url "https://github.com/anteo/hawk-eye"
-                                    :git/sha "LATEST_SHA"}}}
+(def stop (hawk/watch ["."]
+                      (fn [{:keys [type file path]}]
+                        (case type
+                          :create (println "Created:" file)
+                          :modify (println "Modified:" file)
+                          :delete (println "Deleted:" file)))
+                      (fn [e ctx]
+                        (println "Watch error:" (.getMessage e)))))
+
+;; Check which mode was actually used
+(println "Watch mode:" (:hawk-eye/mode (meta stop)))
 ```
+
+### Development Auto-rebuild
+
+```clojure
+(defn rebuild! []
+  (println "Rebuilding...")
+  (compile-my-project))
+
+;; Debounce to avoid multiple rapid rebuilds
+(def debounced-rebuild (hawk/debounce rebuild! 200))
+
+(def stop (hawk/watch ["src" "resources"]
+                      (fn [_] (debounced-rebuild))
+                      (fn [e _] (println "Error:" e))))
+```
+
+### Multiple Directories with Filtering
+
+```clojure
+(def stop (hawk/watch ["src" "test" "resources"]
+                      (fn [{:keys [file] :as event}]
+                        ;; Only react to Clojure files
+                        (when (re-matches #".*\.clj[cs]?$" file)
+                          (println "Clojure file changed:" file)
+                          (run-tests)))
+                      (fn [e _] (println "Error:" e))))
+```
+
+### Using Specific Watch Mode
+
+```clojure
+;; Force polling mode (useful for network drives)
+(def stop (hawk/watch ["network-drive/shared"]
+                      handler
+                      error-handler
+                      {:mode :poll
+                       :poll-ms 100}))
+
+;; Explicitly use FSEvents on macOS
+(def stop (hawk/watch ["src"]
+                      handler
+                      error-handler
+                      {:mode :fsevents}))
+```
+
+### Advanced Debouncing
+
+```clojure
+;; Collect all events that happen within 100ms
+(def collect-events (hawk/debounce 
+                      (fn [events]
+                        (println "Got" (count events) "events")
+                        (doseq [e events]
+                          (println "  -" (:type e) (:file e))))
+                      100
+                      :events :all))
+
+(def stop (hawk/watch ["src"] collect-events (fn [e _] (println "Error:" e))))
+```
+
+## Platform-Specific Behavior
+
+### macOS (FSEvents)
+
+On macOS, hawk-eye automatically attempts to use the native FSEvents API for optimal performance. If initialization fails, it will display a helpful warning and fall back to WatchService polling.
+
+To enable FSEvents:
+
+1. Add the JVM flag: `--enable-native-access=ALL-UNNAMED`
+2. Or add to your `deps.edn` alias:
+
+```clojure
+{:aliases {:dev {:jvm-opts ["--enable-native-access=ALL-UNNAMED"]}}}
+```
+
+Without this flag on newer JVMs, you'll see:
+```
+WARNING: FSEvents initialization failed. Falling back to slower WatchService polling.
+  To use the faster FSEvents on macOS, add this JVM flag:
+    --enable-native-access=ALL-UNNAMED
+  Note: WatchService polling is significantly slower on macOS.
+```
+
+### Java 21+ (Virtual Threads)
+
+On Java 21+, hawk-eye automatically uses virtual threads for better resource efficiency when not on macOS.
+
+### Other Platforms
+
+Uses standard WatchService with efficient polling for maximum compatibility.
+
+## Implementation Details
+
+Hawk-eye uses different strategies based on the platform and available features:
+
+1. **FSEvents (macOS)** - Native macOS file system events, extremely efficient
+2. **Virtual Threads (Java 21+)** - Uses virtual threads with blocking I/O for efficiency
+3. **Polling** - Falls back to WatchService polling for compatibility
+
+The `:auto` mode (default) automatically selects the best available strategy.
+
+## Performance Tips
+
+1. **Use Debouncing**: File systems can generate many events for a single logical change
+2. **Filter Events**: Process only the files you care about in your notify-fn
+3. **Handle Errors**: Always provide an error-fn to handle and log issues
+4. **Stop Watchers**: Always call the stop function when done to free resources
+5. **Enable FSEvents on macOS**: Add the JVM flag for significantly better performance
+
+## Development
+
+### Project Structure
+
+```
+hawk-eye/
+├── src/
+│   └── hawk_eye/
+│       ├── core.clj           # Main API
+│       └── fsevents/          # macOS FSEvents support
+│           ├── core.clj       # JNA bindings
+│           ├── monitor.clj    # Integration layer
+│           └── FSEventCallback.java
+├── classes/                   # Compiled Java classes
+├── test/
+│   └── hawk_eye/
+│       └── core_test.clj
+├── deps.edn
+└── build.clj                  # Build configuration
+```
+
+### Running Tests
+
+```bash
+clojure -T:test
+```
+
+### Building
+
+Compile Java sources:
+```bash
+clojure -T:build compile-java
+```
+
+Build JAR:
+```bash
+clojure -T:build jar
+```
+
+## Troubleshooting
+
+### "WARNING: A restricted method in java.lang.System has been called"
+
+This warning appears when using FSEvents on macOS without the proper JVM flag. Add `--enable-native-access=ALL-UNNAMED` to your JVM options. The library will still work but will use the slower polling method.
+
+### High CPU Usage on macOS
+
+Without FSEvents, the WatchService implementation polls the file system. Enable FSEvents for better performance or increase the `:poll-ms` value.
+
+### Missing Events
+
+Some file systems or editors create temporary files and rename them. You might see delete/create events instead of modify events. This is normal behavior.
+
+### Events Not Detected
+
+- Ensure the directories exist before watching
+- Check that your error-fn is handling exceptions
+- On some systems, very rapid changes might be coalesced
 
 ## License
 
-Copyright © 2024 Anteo AS
+Copyright © 2024
 
 Distributed under the Eclipse Public License version 1.0.
